# LeNetF9

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
src/lenetf9/arch/: __init__.py  lenet.py
src/lenetf9/arch/lenet/: lenet_arch.py  lenet_bin.py
src/lenetf9/config/: system.py  training.py
src/lenetf9/datasets/: __init__.py  mnist.py
src/lenetf9/hyperparameters/: __init__.py
src/lenetf9/hyperparameters/lenet/: __init__.py
test/: test_module_existence.py
