[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lenetf9"
dynamic = ["version"]
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "Fernandes Joao", email = "joaogabrielvlf@gmail.com" },
]

description = "My Neural Networking Based on the \"LeNet\" Classic Problem."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "python-magic-bin==0.4.14",
  "ruff==0.5.4",
  "pre-commit==3.5.0",
  "mypy==1.11.2",
]

[project.urls]
Homepage = "https://github.com/jgvlf/LeNetF9"

[tool.hatch.version]
path = "src/lenetf9/__init__.py"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "lenetf9.*"
ignore_missing_imports = true
