[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lenetf9"
dynamic = ["version"]
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "Fernandes Joao", email = "joaogabrielvlf@gmail.com" },
]

description = "My Neural Networking Based on the \"LeNet\" Classic Problem."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "torch@https://download.pytorch.org/whl/cu121/torch-2.4.1%2Bcu121-cp312-cp312-win_amd64.whl#sha256=b30faf3224697eaed131939690e8877b05b4d4cb6da5b12cfdcba3d742e9afd0",
  "torchaudio@https://download.pytorch.org/whl/cu121/torchaudio-2.4.1%2Bcu121-cp312-cp312-win_amd64.whl#sha256=1dbcafb1bd954fc33bf34e6062be7b2005cfe3bde82bc938d08e650aa9c9c08c",
  "torchvision@https://download.pytorch.org/whl/cu121/torchvision-0.19.1%2Bcu121-cp312-cp312-win_amd64.whl#sha256=a1627f99b9a7ac36f14d1ee207e71cf7ac52329c6317b580980fcc1916fe1276",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "python-magic-bin==0.4.14",
  "ruff==0.5.4",
  "pre-commit==3.5.0",
  "mypy==1.11.2",
]

[project.urls]
Homepage = "https://github.com/jgvlf/LeNetF9"

[tool.hatch.version]
path = "src/lenetf9/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "lenetf9.*"
ignore_missing_imports = true
